Feature/get, delete transaction, get list and filtered list (#34)
* Implemented Transaction Repo

* Implement Transaction Service and update Transaction View

* Implement Transaction Controller, Validator and Update docs

* fix bug on Filtered List

* update route path and swagger docs

* Update time.Time to Unix Timestamp, Merge API search, Dynamic Query for Search

* update code
